--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,31 +4,27 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_create"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_input_add"
             android:title="Create New Project" />
         <item
             android:id="@+id/nav_edit"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@android:drawable/ic_menu_edit"
             android:title="Edit Projects" />
         <item
             android:id="@+id/nav_search"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@android:drawable/ic_search_category_default"
             android:title="Search Project" />
         <item
             android:id="@+id/nav_delete"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@android:drawable/ic_delete"
             android:title="Delete Project" />
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_help"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Help" />
-            <item
                 android:id="@+id/nav_about"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@android:drawable/ic_dialog_info"
                 android:title="About" />
         </menu>
     </item>
