--- a/app/src/main/res/layout/activity_lyrics_activity.xml
+++ b/app/src/main/res/layout/activity_lyrics_activity.xml
@@ -8,4 +8,9 @@
     tools:context="com.example.ian.lyricist.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </RelativeLayout>
