--- a/app/src/main/res/layout/activity_lyrics_create.xml
+++ b/app/src/main/res/layout/activity_lyrics_create.xml
@@ -16,8 +16,7 @@
     <EditText
         android:id="@+id/description"
         android:layout_width="match_parent"
-
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/title"
         android:layout_gravity="center"
