--- a/app/src/main/res/layout/activity_lyrics_list.xml
+++ b/app/src/main/res/layout/activity_lyrics_list.xml
@@ -12,5 +12,13 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Begin your lyrical journey.CLick on the plus sign below."
+        android:visibility="gone"
+        android:textAlignment="center"
+        android:gravity="center_vertical"/>
 
 </RelativeLayout>
