--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ian.lyricist.AboutActivity">
+    tools:context="com.example.ian.lyricist.AboutActivity"
+    >
 
     <WebView
         android:id="@+id/eweb"
