--- a/app/src/main/res/layout/activity_lyrics_create.xml
+++ b/app/src/main/res/layout/activity_lyrics_create.xml
@@ -15,10 +15,10 @@
     <EditText
         android:id="@+id/description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="270dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/title"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
         android:layout_marginTop="39dp"
         android:hint="Description"
         android:overScrollMode="always" />
