--- a/app/src/main/res/layout/activity_lyrics_list.xml
+++ b/app/src/main/res/layout/activity_lyrics_list.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ian.lyricist.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:showIn="@layout/app_bar_main"
+    >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
