--- a/app/src/main/res/layout/activity_lyrics_create.xml
+++ b/app/src/main/res/layout/activity_lyrics_create.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/back2"
+    >
 
     <EditText
         android:id="@+id/title"
@@ -10,7 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="50dp"
-        android:hint="Title" />
+        android:hint="Title"
+        android:inputType="text|textMultiLine|textCapSentences" />
 
     <EditText
         android:id="@+id/description"
@@ -18,10 +22,11 @@
         android:layout_height="270dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/title"
-        android:layout_gravity="left"
         android:layout_marginTop="39dp"
         android:hint="Description"
-        android:overScrollMode="always" />
+        android:inputType="text|textMultiLine|textCapSentences"
+        android:overScrollMode="always"
+        />
 
     <Button
         android:id="@+id/save"
