--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/description1"
                 android:text="Description"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:padding="20dp"
                 android:textStyle="bold"/>
 
